intro and minor edits

--- a/journal/201903.md
+++ b/journal/201903.md
@@ -2,14 +2,15 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month
 
-* dcrd optimization
-* consensus vote
-* voted proposals
-* Treasury proposal
 
-}
+March has seen some significant proposals and votes on the governance side, and solid progress on core software on the development side - a fairly typical month for Decred.
+
+The latest [consensus vote](https://voting.decred.org/), to [fix](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) Lightning Network sequence locks, commenced in block 326656 (Mar 14), it is presently nearing completion with almost 100% support and 54.4% participation, projected to end on Apr 11.
+
+On Politeia, five proposals were published and two proposals finished voting (one accepted, one rejected). Among the new proposals submitted is a [significant one](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) from @moo31337 which outlines a path towards decentralized stakeholder control of Treasury spending. 
+
+dcrd saw a huge [refactoring](https://github.com/decred/dcrd/pull/1656) that bring significant performance improvements for all users. In addition to an immediate performance boost upon upgrading, these updates will continue to yield incremental speed improvements as the rest of the network upgrades.
 
 ## Development
 
@@ -50,7 +51,7 @@ In the big picture, changes like background block template generator and part of
 
 [Politeia](https://github.com/decred/politeia): Added tab to [preview](https://github.com/decred/politeiagui/pull/1018) proposal text, completed feature to [view difference](https://github.com/decred/politeiagui/pull/1004) between proposal versions, changed [default comment sort]((https://github.com/decred/politeiagui/pull/1034)) to first show comments with highest score, added feature to set sort in the URL. Many bugs were fixed. These changes were merged in the master branch and will be deployed on the [main proposals site](https://proposals.decred.org/) after some testing on the [test site](https://test-proposals.decred.org/).
 
-In terms of code infrastructure, several parts of contractor management system landed in master, completed several steps of refactoring to fix layer violations and better support contractor management system, test coverage [increased](https://github.com/decred/politeia/pull/727) from 13% to 19%.
+In terms of code infrastructure, several parts of the contractor management system landed in master. Several refactoring steps were completed to fix layer violations and better support contractor management system, test coverage [increased](https://github.com/decred/politeia/pull/727) from 13% to 19%.
 
 A bug was detected that allowed advanced users to cast votes beyond the end of the voting period. It was known for some time and the fix was awaiting deployment. Upon learning that late votes were occurring the fix was deployed on Mar 13. Politeia UI may display slightly incorrect vote counts for some proposal but vote outcomes were not affected.
 
@@ -60,7 +61,7 @@ A total of 40 commits were merged in [politeia](https://github.com/decred/polite
 
 [dcrandroid](https://github.com/decred/dcrandroid): minor bug fixes, Chinese translation added, speed optimizations for viewing the transaction history.
 
-[dcrios](https://github.com/raedahgroup/dcrios): dcrios beta is in good shape and ready for more public exposure. Testers are welcome and they can get the app at [TestFlight](https://testflight.apple.com/join/dvq51tCh). There are only a couple of minor outstanding bugs. There are known layout bugs for iPod Touch devices which are still in the works. The blocker at the moment is dealing with some formalities to approve Apple Store account. As soon as that is done, an official release client will be made.
+[dcrios](https://github.com/raedahgroup/dcrios): dcrios beta is in good shape and ready for more public exposure. Testers are welcome and they can get the app at [TestFlight](https://testflight.apple.com/join/dvq51tCh). There are only a couple of minor outstanding bugs. There are known layout bugs for iPod Touch devices which are still in the works. The blocker at the moment is dealing with some formalities to approve the Apple Store account. As soon as that is done, an official release client will be made.
 
 [dcrdata](https://github.com/decred/dcrdata): Version 4 [released](https://twitter.com/decredexplorer/status/1110618796975370240) and is available at [explorer.dcrdata.org](https://explorer.dcrdata.org/).
 
@@ -107,10 +108,10 @@ In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 Proposal status as of Apr 9:
 
-* [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) approved by 67% Yes of the 9.3K tickets that voted. Ahead of the vote, Trust Wallet developers [moved forward](https://github.com/TrustWallet/wallet-core/issues/43) to integrate Decred on their end.
+* [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) approved with 67% Yes votes of the 9.3K tickets that voted. Ahead of the vote, Trust Wallet developers [moved forward](https://github.com/TrustWallet/wallet-core/issues/43) to integrate Decred on their end.
 * [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) rejected - 52.5% Yes among 12.7K voting tickets didn't reach the quorum of 60%. Possibility of a second attempt was discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15542882616188dHEHP:decred.org).
 * Re-submission of the Coffee Wallet [proposal](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) after it was abandoned was [blocked](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$155144086813111EMAcC:decred.org) by admins as an attempt to use Politeia to market the product.
-* [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337 outlines 2-step process where a draft spending transaction is published on Politeia for review, and then voted on-chain by the stakeholders. The development, testing and a required consensus vote are projected to be on the order of 9-12 months, with the budget of $200,000-250,000.
+* [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337 outlines a 2-step process where a draft spending transaction is published on Politeia for review, and then voted for on-chain by the stakeholders. The development, testing and a required consensus vote are projected to take on the order of 9-12 months, with the budget of $200,000-250,000.
 * [Fiat pairs integration on EXMO Exchange](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) by vadymprykhodko was published following a [pre-proposal](https://www.reddit.com/r/decred/comments/b0y9le/integration_on_exmo_exchange_new_fiat_pairs/) on r/decred. The proposal seeks $23,800 to add DCR fiat pairs on EXMO, an exchange popular in Eastern Europe.
 * [Amendment to Decred Constitution](https://proposals.decred.org/proposals/fd56bb79e0383f40fc2d92f4473634c59f1aa0abda7aabe29079216202c83114) by @richardred was submitted following a lot of discussions tracked in [this issue](https://github.com/xaur/decred-issues/issues/107).
 
@@ -119,9 +120,9 @@ Pre-proposals:
 * [India education and awareness campaign](https://www.reddit.com/r/decred/comments/awb5y0/preproposal_decred_india_community_new_user/) by u/Blocknext. In a chat [discussion](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15515162772723165JzrFj:matrix.org) it was pointed out that a [similar proposal](https://www.dash.org/forum/threads/building-commercial-dash-use-in-the-freelancing-industry-across-south-asia.17890/) was submitted for Dash.
 * [Second constitutional amendment](https://www.reddit.com/r/decred/comments/b84t6b/preproposal_second_constitutional_amendment_to/) by @richardred to declare February 8th the International day of Stakey.
 
-decredcommunity.org got some [criticism](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155227203622209rOKeX:decred.org) for not being open source and not explicitly stating it in the body of the proposal. One of the arguments is that the Treasury never paid for closed source work before, except for some integrations where it could not be disclosed. Captured in [this issue](https://github.com/karamble/dcrcommunityweb/issues/1), the discussion also triggered some [improvements](https://github.com/decred/dcrdocs/pull/896) in proposal guidelines to state any restrictions on deliverables.
+decredcommunity.org got some [criticism](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155227203622209rOKeX:decred.org) for not being open source and not explicitly stating it in the body of the proposal. One of the arguments is that the Treasury has never paid for closed source work before, except for some integrations where it could not be disclosed. Funding of software that is not open source also goes against the project's [constitution](https://docs.decred.org/governance/decred-constitution/). Captured in [this issue](https://github.com/karamble/dcrcommunityweb/issues/1), the discussion also triggered some [improvements](https://github.com/decred/dcrdocs/pull/896) in proposal guidelines to state any restrictions in terms of the licensing of deliverables.
 
-@richardred posted an [analysis](https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/early-voting-influence.md) exploring to what degree early votes influence the behavior of late voters, and eventually the result of the vote.
+@richardred posted an [analysis](https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/early-voting-influence.md) exploring to what degree early votes influence the behavior of late voters, and whether this kind of effect could influence the outcome of votes.
 
 For greater detail, analysis and commentary see @richardred's Politeia Digest [issue 12](https://richardred0x.github.io/politeia-digest/issue-012.html) and [issue 13](https://richardred0x.github.io/politeia-digest/issue-013.html).
 
@@ -136,7 +137,7 @@ Discussions:
 
 ## Network
 
-Hashrate: March's hashrate varied between the low of 221 Ph/s and a new ATH of 570 Ph/s. During first half of the month the average held around 320 Ph/s but went above 400 Ph/s towards the end. Pool hashrate distribution as of Apr 1: F2Pool 23%, Poolin 20%, lab.antpool.com 16%, BTC.com 12%, UUPool 11%, Luxor 3.2%, CoinMine 0.4% and others 14% per dcrstats.com. Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: March's hashrate varied between the low of 221 Ph/s and a new ATH of 570 Ph/s. During the first half of the month the average held around 320 Ph/s, but increased to greater than 400 Ph/s towards the end. Pool hashrate distribution as of Apr 1: F2Pool 23%, Poolin 20%, lab.antpool.com 16%, BTC.com 12%, UUPool 11%, Luxor 3.2%, CoinMine 0.4% and others 14% per dcrstats.com. Pool distribution numbers are approximate and cannot be accurately determined.
 
 Staking: 30-day average ticket price was 112.3 DCR (+0.6) on Apr 1 per dcrstats.com. The price varied between 108.6-117.9 DCR. Locked amount was 4.47-4.61 million DCR, which corresponded to 46.9-48.6% of the available supply.
 
@@ -150,9 +151,9 @@ Nodes: As of Apr 1 there were 191 public listening nodes and 336 normal nodes pe
 
 ## Integrations
 
-Following a joint [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco, OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the listing of DCR pairs against BTC, ETH and USD, adding another fiat on-ramp for DCR. The news were picked up by [The Block](https://www.theblockcrypto.com/tiny/okcoin-offers-first-usd-to-crypto-trading-pair-for-decred-but-difficult-questions-remain/) and several smaller outlets.
+Following a joint [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco, OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the listing of DCR pairs against BTC, ETH and USD, adding another fiat on-ramp for DCR. The news was picked up by [The Block](https://www.theblockcrypto.com/tiny/okcoin-offers-first-usd-to-crypto-trading-pair-for-decred-but-difficult-questions-remain/) and several smaller outlets.
 
-[CoinText](https://cointext.io/) added [DCR support](https://twitter.com/vinarmani/status/1111034078847995905). The service allows to send DCR to anyone with a phone in the US and Canada. Do read up on how the service works and use appropriate caution and small amounts.
+[CoinText](https://cointext.io/) added [DCR support](https://twitter.com/vinarmani/status/1111034078847995905). The service allows one to send DCR to anyone with a phone in the US and Canada. Do read up on how the service works and use appropriate caution and small amounts.
 
 ## Outreach
 
@@ -275,15 +276,15 @@ Selected Reddit discussions: "Skepticism Sunday" threads on [Mar 3](https://www.
 
 In March DCR was trading between USD 15.93-23.26 / BTC 0.00414-0.00596 per [coinmarketcap](https://coinmarketcap.com/currencies/decred/#charts). The average daily rate was $18.14.
 
-In the middle of March many cryptoassets experienced significant short-term or prolonged growth. On Mar 12 DCR had a short spike on all exchanges, for example on Binance from 0.0043 to 0.00638 BTC. After that the price settled above 0.0048 BTC where it was in the best days of Dec-Jan and earlier.
+In the middle of March many cryptoassets experienced significant short-term or prolonged growth. On Mar 12 DCR had a short spike on all exchanges, for example on Binance from 0.0043 to 0.00638 BTC. After that the price settled above 0.0048 BTC.
 
 ## Relevant External
 
 GitHub is [updating](https://github.blog/2019-03-14-githubs-site-policy-updates-are-ready-for-your-feedback/) their policy. New drafts were published for feedback till Apr 12 and will come into effect Apr 19. Among the changes is commitment to react to [Do Not Track](https://en.wikipedia.org/wiki/Do_Not_Track), sharing user data with [more](https://github.com/github/site-policy/pull/154) 3rd party processors and updated use of third party user trackers. The change to clarify influence of U.S. sanctions triggered a question how this might impact Decred contributors - if you know, please comment in [this issue](https://github.com/xaur/decred-issues/issues/125) or [on Reddit](https://old.reddit.com/r/decred/comments/b2xsw3/github_terms_update_has_more_sanctions_stuff/). Some changes might be unpleasant but are pretty common for most companies and give us a good moment to reflect on our beliefs about free stuff. Also, unlike most companies, GitHub has all their policy documents versioned transparently in a Git repo that anybody can clone and inspect. The idea to have a similar repository for Decred was discussed a few times and there is a concept sandbox [repository](https://github.com/RichardRed0x/governance-docs) showing how it might look like.
 
-Stellar (XLM) [experienced](https://messari.io/article/messari-research-stellar-suffered-and-quietly-patched-a-2-2-billion-xlm-inflation-bug-in-2017) an inflation bug which was exploited to print 2.25 billion XLM (worth $10 million at the time, and nearly 25% of the circulating supply) in April 2017. This bug was lightly reported at the time, it was fixed by the Stellar Development Foundation (SDF) who burned an equal amount from its community reserve. That the SDF could identify, fix and mitigate such a major exploit so quietly says something about how decentralized Stellar is.
+Stellar (XLM) [experienced](https://messari.io/article/messari-research-stellar-suffered-and-quietly-patched-a-2-2-billion-xlm-inflation-bug-in-2017) an inflation bug which was exploited to print 2.25 billion XLM (worth $10 million at the time, and nearly 25% of the circulating supply) in April 2017. This bug was lightly reported at the time, it was fixed by the Stellar Development Foundation (SDF) who burned an equal amount from its community reserve to offset the unintended inflation. That the SDF could identify, fix and mitigate such a major exploit so quietly says something about how decentralized Stellar is.
 
-PIVX experienced an inflation bug which was [exploited](https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701) in March. The bug concerned the network's zerocoin protocol (zPIV), and allowed an attacker to fake serial numbers and spend zerocoins that had never been minted. Over the course of five days, transactions creating and spending 568,897 PIV (~$438,000) were made before zPIV the exploit was identified and zPIV transactions were disabled until it could be fixed. Besides regular takeaways like "consensus code is hard" and "cryptography is hard", this case has more food for thought. First, zerocoin functionality was disabled immediately after the exploit was discovered using one of the "sporks". Someone with the keys for these sporks can affect the whole network. Second, the bug was spotted because some nodes were [switching away](https://github.com/PIVX-Project/PIVX/pull/681) from OpenSSL that let the bug go unnoticed (OpenSSL is long [famous](https://www.peereboom.us/assl/assl/html/openssl.html) for its quality). While those nodes were not full alternative implementations, it still shows how a mismatch between diverse software helps to discover bugs. Third, it is possible to know exactly how many coins were minted because PIVX's zerocoin protocol allows supply to be [auditable](https://zcoin.io/zcoins-privacy-technology-compares-competition/), unlike some other protocols.
+PIVX experienced an inflation bug which was [exploited](https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701) in March. The bug concerned the network's zerocoin protocol (zPIV), and allowed an attacker to fake serial numbers and spend zerocoins that had never been minted. Over the course of five days, transactions creating and spending 568,897 PIV (~$438,000) were made before the exploit was identified and zPIV transactions were disabled (until it could be fixed). Besides regular takeaways like "consensus code is hard" and "cryptography is hard", this case has more food for thought. First, zerocoin functionality was disabled immediately after the exploit was discovered using one of the "sporks". Someone with the keys for these sporks can affect the whole network. Second, the bug was spotted because some nodes were [switching away](https://github.com/PIVX-Project/PIVX/pull/681) from OpenSSL that let the bug go unnoticed (OpenSSL is long [famous](https://www.peereboom.us/assl/assl/html/openssl.html) for its quality). While those nodes were not full alternative implementations, it still shows how a mismatch between diverse software helps to discover bugs. Third, it is possible to know exactly how many coins were minted because PIVX's zerocoin protocol allows supply to be [auditable](https://zcoin.io/zcoins-privacy-technology-compares-competition/), unlike some other protocols.
 
 Monero's new [Community Crowdfunding System](https://ccs.getmonero.org/) was [launched](https://www.reddit.com/r/Monero/comments/ay0j5n/the_new_ffs_is_complete_please_use_and_explore_it/), and a number of projects were funded.
 
@@ -299,17 +300,17 @@ Grin developers [voted](https://www.coindesk.com/privacy-cryptocurrency-grin-vot
 
 Poloniex [committed](https://medium.com/circle-blog/poloniex-welcomes-grin-commits-to-share-transaction-fees-for-1-year-d07bc92cc0f8) to share a portion of Grin trading fees with [Grin General Fund](https://grin-tech.org/general_funding). 50% of all fees will be donated during the first month, and 25% for the next 11 months. Pretty rare and generous act in the space.
 
-Jack Dorsey [announced](https://www.coindesk.com/square-hiring-crypto-engineers-bitcoin) Square is looking to fund engineers and a designer to work full-time on Bitcoin and cryptocurrency ecosystem, as a way to give back to the community. One [response](https://twitter.com/MartyBent/status/1108494280484630528) noted that "dev fund" embedded in a protocol is not needed because network participants have enough incentives to fund their infrastructure. In case of Decred, if the Treasury is ever deemed no longer necessary, it is in the power stakeholders to repurpose it for investing into a wider crypto/open source/open hardware ecosystem, or disband it entirely.
+Jack Dorsey [announced](https://www.coindesk.com/square-hiring-crypto-engineers-bitcoin) Square is looking to fund engineers and a designer to work full-time on Bitcoin and cryptocurrency ecosystem, as a way to give back to the community. One [response](https://twitter.com/MartyBent/status/1108494280484630528) noted that "dev fund" embedded in a protocol is not needed because network participants have enough incentives to fund their infrastructure. In Decred's case, if the Treasury is ever deemed no longer necessary, it is within stakeholders' power to repurpose it for investing into a wider crypto/open source/open hardware ecosystem, or disband it entirely.
 
-Investigation of QuadrigaCX by Ernst & Young [found](https://cointelegraph.com/news/report-quadrigacx-wallets-have-been-empty-unused-since-april) that exchange's cold wallets were empty and unused since April 2018. Kraken [offered](https://blog.kraken.com/post/2155/were-offering-a-100000-reward-for-discovery-of-quadriga-coins/) a $100K reward for tips that best lead to the discovery of the missing $190 million.
+Investigation of QuadrigaCX by Ernst & Young [found](https://cointelegraph.com/news/report-quadrigacx-wallets-have-been-empty-unused-since-april) that exchange's cold wallets were empty and unused since April 2018. Kraken [offered](https://blog.kraken.com/post/2155/were-offering-a-100000-reward-for-discovery-of-quadriga-coins/) a $100K reward for tips that lead to the discovery of the missing $190 million.
 
-New research from @BitwiseInvest [suggests](https://twitter.com/BitwiseInvest/status/1109114656944209921) 95% of reported BTC spot volume is fake, but also notes many good news about the crypto ecosystem.
+New research from @BitwiseInvest [suggests](https://twitter.com/BitwiseInvest/status/1109114656944209921) 95% of reported BTC spot volume is fake, but also notes much good news about the crypto ecosystem.
 
-IMF found an [elegant solution](https://blogs.imf.org/2019/02/05/cashing-in-how-to-make-negative-interest-rates-work/) to make negative interest rates work as a counter-measure to a possible future crisis. Negative interest rate of -3% is when you deposit $100 to a bank and withdraw $97 a year later. Such rate is currently hard to enforce because people would just withdraw to cash. The "straightforward" solution would be to move into a happy "cashless world" where the bank can set arbitrary negative rate and you simply can't withdraw to cash to save your value from melting. This is expected to "make consumption and investment more attractive, ... jolt lending, boost demand, and stimulate the economy". But getting rid of cash is not easy and is years away. So another solution to sustain a negative interest rate that is easier to roll today is to split a fiat currency into e-money and cash and introduce a floating conversion rate between them. This way, in a -3% interest rate scenario, you either deposit 100 cash dollars into e-dollars and get 97 e-dollars in a year, or hold cash and enjoy a 3% value loss against both goods and the e-dollar. In such a system there is no benefit to hold cash relative to bank deposits. Hasu and Su Zhu argue that crypto can [serve as a hedge](https://uncommoncore.co/bitcoin-is-a-hedge-against-the-cashless-society/) against the cashless society. Disclaimer: this paragraph is written by a layman. Economists are welcome to [comment](https://www.reddit.com/r/decred/) how this is healthy at all.
+IMF found an [elegant solution](https://blogs.imf.org/2019/02/05/cashing-in-how-to-make-negative-interest-rates-work/) to make negative interest rates work as a counter-measure to a possible future crisis. A negative interest rate of -3% would mean you deposit $100 to a bank and withdraw $97 a year later. Such rates are currently hard to enforce because people would just withdraw to cash. The "straightforward" solution would be to move into a happy "cashless world" where the bank can set arbitrary negative rates and you simply can't withdraw to cash to save your value from melting. This is expected to "make consumption and investment more attractive, ... jolt lending, boost demand, and stimulate the economy". But getting rid of cash is not easy and is years away. So another solution to sustain a negative interest rate that is easier to roll today is to split a fiat currency into e-money and cash and introduce a floating conversion rate between them. This way, in a -3% interest rate scenario, you either deposit 100 cash dollars into e-dollars and get 97 e-dollars in a year, or hold cash and enjoy a 3% value loss against both goods and the e-dollar. In such a system there is no benefit to hold cash relative to bank deposits. Hasu and Su Zhu argue that crypto can [serve as a hedge](https://uncommoncore.co/bitcoin-is-a-hedge-against-the-cashless-society/) against the cashless society. Disclaimer: this paragraph is written by a layman. Economists are welcome to [comment](https://www.reddit.com/r/decred/) how this is healthy at all.
 
 [Coinbase Custody](https://custody.coinbase.com/) [enabled](https://twitter.com/CoinbaseCustody) deposits and withdrawals for ZIL, KNC, ZEC, XTZ and [claim](https://blog.coinbase.com/coinbase-custody-launches-staking-support-for-tezos-makerdao-governance-to-follow-68f7bc51bc53) to hold $600 million for 60 clients. The service offers regulated, insured and full offline, segregated custodial storage of crypto. The plan is to allow clients to fully participate in crypto networks besides just holding: Tezos baking (staking) is already implemented while voting in Tezos and MakerDAO is planned for Q2 2019.
 
-Coinbase received a [backlash](https://www.coindesk.com/bitcoin-delete-coinbase-neutrino-crypto) from users who deleted their accounts to protest the acquisition of Neutrino, a blockchain analysis startup. The users were upset because Neutrino's executives previously worked for Hacking Team, which sold spyware to governments to aid surveillance and crackdown on journalists and critics. By concidence, several user faced [difficulties](https://www.reddit.com/r/Bitcoin/comments/avw5uu/unable_to_close_coinbase_account/) closing their accounts. The Block [reported](https://www.theblockcrypto.com/2019/02/26/coinbase-responds-to-its-controversial-acquisition-of-blockchain-intelligence-platform-neutrino/) that Coinbase knew about Neutrino's background but still decided to proceed with the acquisition. A week later Coinbase CEO Brian Armstrong called it a "gap in our diligence process" and [announced](https://blog.coinbase.com/living-up-to-our-values-and-the-neutrino-acquisition-ba98174cdcf6) that people who worked at Hacking Team will transition out of Coinbase.
+Coinbase received a [backlash](https://www.coindesk.com/bitcoin-delete-coinbase-neutrino-crypto) from users who deleted their accounts to protest the acquisition of Neutrino, a blockchain analysis startup. The users were upset because Neutrino's executives previously worked for Hacking Team, which sold spyware to governments to aid surveillance and crackdown on journalists and critics. By coincidence, several user faced [difficulties](https://www.reddit.com/r/Bitcoin/comments/avw5uu/unable_to_close_coinbase_account/) closing their accounts. The Block [reported](https://www.theblockcrypto.com/2019/02/26/coinbase-responds-to-its-controversial-acquisition-of-blockchain-intelligence-platform-neutrino/) that Coinbase knew about Neutrino's background but still decided to proceed with the acquisition. A week later Coinbase CEO Brian Armstrong called it a "gap in our diligence process" and [announced](https://blog.coinbase.com/living-up-to-our-values-and-the-neutrino-acquisition-ba98174cdcf6) that people who worked at Hacking Team will transition out of Coinbase.
 
 The problem Coinbase tried to solve with that acquisition was their KYC contractors "selling client data", as [slipped](https://news.bitcoin.com/coinbase-severs-ties-with-hacking-team-members-while-data-sharing-backlash-intensifies/) in one interview. Many exchanges don't verify ID directly but instead hand it to 3rd parties, who may in turn hand it to more 3rd parties, and so on so it can quickly get [out of control](https://twitter.com/NickSzabo4/status/1102353760276275206). Per another [report](https://bitcoinmagazine.com/articles/coinbase-bought-neutrino-because-its-old-analysis-providers-sold-user-data/) there was not much choice for Coinbase due to another problem - many such firms moved to a 'give-get' data model, where Coinbase would only be permitted to use the service in return for providing its own data. Besides spreading to an unknown set of entities, another risk is that enormous amount of interlinked personal data may concentrate in a single place that will become an attractive target. For example, [Jumio](https://en.wikipedia.org/wiki/Jumio)'s Netverify is [used](https://cybersecurity-excellence-awards.com/candidates/netverify) by 5 of the top 10 exchanges including Coinbase, Bittrex and Bitstamp, and an increasing number of ICO issuers.
 
