--- a/journal/201903.md
+++ b/journal/201903.md
@@ -1,20 +1,18 @@
-# {DRAFT} Decred Journal – March 2019
+# Decred Journal – March 2019
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-
-
 March has seen some significant proposals and votes on the governance side, and solid progress on core software on the development side - a fairly typical month for Decred.
 
-The latest [consensus vote](https://voting.decred.org/), to [fix](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) Lightning Network sequence locks, commenced in block 326656 (Mar 14), it is presently nearing completion with almost 100% support and 54.4% participation, projected to end on Apr 11.
+The latest [consensus vote](https://voting.decred.org/) to [fix](https://github.com/decred/dcps/blob/master/dcp-0004/dcp-0004.mediawiki) Lightning Network sequence locks is presently nearing completion with almost 100% support and 54% participation, projected to end on Apr 11.
 
-On Politeia, five proposals were published and two proposals finished voting (one accepted, one rejected). Among the new proposals submitted is a [significant one](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) from @moo31337 which outlines a path towards decentralized stakeholder control of Treasury spending. 
+On Politeia, five proposals were published and two proposals finished voting (one accepted, one rejected). Among the new proposals submitted is a [significant one](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) from @moo31337 which outlines a path towards decentralized stakeholder control of Treasury spending.
 
-dcrd saw a huge [refactoring](https://github.com/decred/dcrd/pull/1656) that bring significant performance improvements for all users. In addition to an immediate performance boost upon upgrading, these updates will continue to yield incremental speed improvements as the rest of the network upgrades.
+dcrd saw a huge [refactoring](https://github.com/decred/dcrd/pull/1656) that will bring significant performance improvements for all users when v1.5.0 is released, although advanced users can build it from source today.
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): Huge [refactoring](https://github.com/decred/dcrd/pull/1656) makes initial full sync [20-25%](https://twitter.com/davecgh/status/1110649183185317889) faster, down to around 45 mins on typical hardware. Another benefit is reduced vote propagation latency:
+[dcrd](https://github.com/decred/dcrd): huge [refactoring](https://github.com/decred/dcrd/pull/1656) makes initial full sync [20-25%](https://twitter.com/davecgh/status/1110649183185317889) faster, down to around 45 mins on typical hardware. Another benefit is reduced vote propagation latency:
 
 > \[latency is affected by\] many factors, but per node average from ~70ms to sub 5ms on my nodes. Need more data for better values. Good alone, but real gains will come with majority network upgrade since savings are multiplied by number of nodes votes traverse (log_8(tot)). Full deployment ~90% overall improvement. ([@davecgh](https://twitter.com/davecgh/status/1110721000172384256))
 
@@ -22,38 +20,27 @@ As part of the optimization `txscript` module was completely refactored to use a
 
 > Initial sync is a big factor of course, but the real gains are in the ongoing transaction processing for mempool. The other really nice facet is the exported tokenizer which means it's possible to do zero-allocation analysis on scripts outside of txscript which is great for building apps (e.g. atomic swaps, taproot, etc) on top. ([@davecgh](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$155249146926580yNJqU:decred.org))
 
-Because a critical and error prone area of consensus code was changed, significant effort has been put into making these changes easier to reason about and review by carefully crafting a series of 122 individual commits such that every commit message thoroughly describes its purpose, maintains consensus, and therefore passes all tests.
-
-Bonus: the refactoring slashed some 2K lines of code. Less code, less bugs!
+Because a critical and error prone area of consensus code was changed, significant effort has been put into making these changes easier to reason about and review by carefully crafting a series of 122 individual commits such that every commit message thoroughly describes its purpose, maintains consensus, and therefore passes all tests. Bonus: the refactoring slashed some 2K lines of code. Less code, less bugs!
 
 There is an opportunity to remove another 10-15 min of initial block download but it requires months of solid work _(hint to contributors)_.
 
-Other merged work:
-
-* Initial Bech32 address ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki)) support [ported](https://github.com/decred/dcrd/pull/1646) from btcsuite.
-* Introduced a reusable [LRU cache](https://github.com/decred/dcrd/pull/1683) module.
-* Module `hdkeychain` [refactored](https://github.com/decred/dcrd/pull/1696) to make code less brittle and more testable.
-* [Added](https://github.com/decred/dcrd/pull/1424) new background block template generators.
-* Lots of refactoring and testing improvements to harden the codebase against unintended changes.
+Other merged work: initial Bech32 address ([BIP 173](https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki)) support [ported](https://github.com/decred/dcrd/pull/1646) from btcsuite, introduced a reusable [LRU cache](https://github.com/decred/dcrd/pull/1683) module, `hdkeychain` module was [refactored](https://github.com/decred/dcrd/pull/1696) to make code less brittle and more testable, [added](https://github.com/decred/dcrd/pull/1424) new background block template generators. Lots of code clarity and testing improvements were made to harden the codebase against unintended changes.
 
 A total of [209 commits](https://github.com/decred/dcrd/compare/4e7f080b7b2cb11a8680d54dc5fb9ce735119d15...8f5019e083e92f31b2799f9d23809e0c0692d465) from 9 contributors were merged in March.
 
-In progress:
-
-* Another large refactor [started](https://github.com/decred/dcrd/pull/1698) to address multiple issues in `chaincfg` module.
-* Discussion [started](https://github.com/decred/dcrd/issues/1645) to protect node seeding process from DNS based attacks.
+In progress: another large refactor [started](https://github.com/decred/dcrd/pull/1698) to address multiple issues in `chaincfg` module, discussion [started](https://github.com/decred/dcrd/issues/1645) to protect node seeding process from DNS based attacks.
 
 In the big picture, changes like background block template generator and part of `txscript` optimization aim to improve scalability and reduce the number of missed votes on the network through improvements to the mining infrastructure and reduction of vote propagation latencies. The other part of `txscript` and `chaincfg` refactoring are infrastructure work to properly introduce a new script engine version for future desirable consensus changes such as the decentralized treasury spending. Even if that [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) doesn't pass, the infrastructure is still needed for a wide variety of future script-related consensus changes.
 
 [dcrwallet](https://github.com/decred/dcrwallet): bug fixes and code maintenance. Merged [12 commits](https://github.com/decred/dcrwallet/compare/9f5f1163d8bf8037138f07734002470d4100de21...9450c9183e71231065dc0ea25087a47e8e5bb38e) from 6 contributors.
 
-[Decrediton](https://github.com/decred/decrediton): Ticket activity heatmap visualization merged among smaller fixes - total [5 commits](https://github.com/decred/decrediton/compare/35ab6e216dde0bc90d76334e25eb5174bf62e623...f80e832e55231a8f4cb7b1aa69f6e2faea2709df) from 2 contributors.
+[Decrediton](https://github.com/decred/decrediton): ticket activity heatmap visualization merged among smaller fixes - total [5 commits](https://github.com/decred/decrediton/compare/35ab6e216dde0bc90d76334e25eb5174bf62e623...f80e832e55231a8f4cb7b1aa69f6e2faea2709df) from 2 contributors.
 
-[Politeia](https://github.com/decred/politeia): Added tab to [preview](https://github.com/decred/politeiagui/pull/1018) proposal text, completed feature to [view difference](https://github.com/decred/politeiagui/pull/1004) between proposal versions, changed [default comment sort]((https://github.com/decred/politeiagui/pull/1034)) to first show comments with highest score, added feature to set sort in the URL. Many bugs were fixed. These changes were merged in the master branch and will be deployed on the [main proposals site](https://proposals.decred.org/) after some testing on the [test site](https://test-proposals.decred.org/).
+[Politeia](https://github.com/decred/politeia): added tab to [preview](https://github.com/decred/politeiagui/pull/1018) proposal text, completed feature to [view difference](https://github.com/decred/politeiagui/pull/1004) between proposal versions, changed [default comment sort]((https://github.com/decred/politeiagui/pull/1034)) to first show comments with highest score, added ability to set sort in the URL. Many bugs were fixed. These changes were merged in the master branch and will be deployed on the [main proposals site](https://proposals.decred.org/) after some testing on the [test site](https://test-proposals.decred.org/).
 
-In terms of code infrastructure, several parts of the contractor management system landed in master. Several refactoring steps were completed to fix layer violations and better support contractor management system, test coverage [increased](https://github.com/decred/politeia/pull/727) from 13% to 19%.
+In terms of code infrastructure, several parts of the contractor management system landed in master following a codebase cleanup after rapid development phase. Test coverage was [increased](https://github.com/decred/politeia/pull/727) from 13% to 19%.
 
-A bug was detected that allowed advanced users to cast votes beyond the end of the voting period. It was known for some time and the fix was awaiting deployment. Upon learning that late votes were occurring the fix was deployed on Mar 13. Politeia UI may display slightly incorrect vote counts for some proposal but vote outcomes were not affected.
+A bug was detected that allowed advanced users to cast votes beyond the end of the voting period. It was known for some time and the fix was awaiting deployment. Upon learning that late votes were occurring the fix was deployed on Mar 13. Politeia UI may display slightly incorrect vote counts for some proposals but vote outcomes were not affected.
 
 > The reassuring part about Politeia is that all of the data is publicly available and is periodically timestamped onto the Decred blockchain. This means that anyone can pull the data down from github and cryptographically verify which votes were cast within the voting period (+/- 1 hour) and which ones were cast after the voting period had ended. (@lukebp in [Politeia Digest 12](https://richardred0x.github.io/politeia-digest/issue-012.html))
 
@@ -63,28 +50,21 @@ A total of 40 commits were merged in [politeia](https://github.com/decred/polite
 
 [dcrios](https://github.com/raedahgroup/dcrios): dcrios beta is in good shape and ready for more public exposure. Testers are welcome and they can get the app at [TestFlight](https://testflight.apple.com/join/dvq51tCh). There are only a couple of minor outstanding bugs. There are known layout bugs for iPod Touch devices which are still in the works. The blocker at the moment is dealing with some formalities to approve the Apple Store account. As soon as that is done, an official release client will be made.
 
-[dcrdata](https://github.com/decred/dcrdata): Version 4 [released](https://twitter.com/decredexplorer/status/1110618796975370240) and is available at [explorer.dcrdata.org](https://explorer.dcrdata.org/).
+[dcrdata](https://github.com/decred/dcrdata): version 4 [released](https://twitter.com/decredexplorer/status/1110618796975370240) and is available at [explorer.dcrdata.org](https://explorer.dcrdata.org/).
 
-User facing changes include complete redesign with new page styles, more information and better organization, Politeia proposal pages, aggregate block information on time intervals, log and linear scaling for charts, exchange rate monitoring, and lots of smaller changes. It is rumored that the HODL watermark is gone. For dev updates check the full [release notes](https://github.com/decred/dcrdata/releases/tag/v4.0.0).
+User facing changes include complete redesign with new page styles, more information and better organization, Politeia proposal pages, aggregate block information on time intervals, log and linear scaling for charts, exchange rate monitoring and lots of smaller things. It is rumored that the HODL watermark is gone. For dev updates check the full [release notes](https://github.com/decred/dcrdata/releases/tag/v4.0.0).
 
 During 3 months of development, the v4 release received a stunning 48K added and 19K deleted lines in 325 commits from 11 contributors. Congrats dcrdata!
 
 > There are features and improvements already brewing 4.1, so minor release should follow relatively quickly. 4.0 scope creeped quite a bit, but all for good reason, and it was worth it. ([@chappjc](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155305431834229kjptE:decred.org))
 
-In progress:
-
-* Load testing and performance optimization continues.
-* Dependency management improvements with Go modules.
-* Live consensus [vote tracking](https://github.com/decred/dcrdata/pull/1125).
-* Faster [charts](https://github.com/decred/dcrdata/pull/1126).
-* Proposal votes [charts](https://github.com/decred/dcrdata/pull/1210).
-* [dcrextdata](https://github.com/raedahgroup/dcrextdata), a component for dcrdata that will allow tracking of data not present on the blockchain, such as historical information about exchange prices and mining pools.
+In progress: load testing and performance optimization continues, dependency management improvements with Go modules, live consensus [vote tracking](https://github.com/decred/dcrdata/pull/1125), faster [charts](https://github.com/decred/dcrdata/pull/1126), proposal votes [charts](https://github.com/decred/dcrdata/pull/1210) and [dcrextdata](https://github.com/raedahgroup/dcrextdata) - a component for dcrdata that will allow tracking of data not present on the blockchain, such as historical information about exchange prices and mining pools.
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): v0.7.6 [released](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.6) that optimizes the fetching of unspent outputs from dcrdata and adds macOS binaries.
 
 [docs](https://github.com/decred/dcrdocs): new detailed [Ticket Splitting](https://docs.decred.org/proof-of-stake/ticket-splitting/) guide, [Consensus Rules Voting](https://docs.decred.org/governance/consensus-rule-voting/consensus-rules-voting/) reworked and extended, [Proposal Guidelines](https://docs.decred.org/governance/politeia/proposal-guidelines/) updated to include key requirements for proposals funded from Treasury.
 
-[decred.org](https://github.com/decred/dcrweb): updated exchanges and translations, [self-hosted](https://github.com/decred/dcrweb/pull/604) intro video to remove a YouTube request.
+[decred.org](https://github.com/decred/dcrweb): updated exchanges and translations, [self-hosted](https://github.com/decred/dcrweb/pull/604) intro video to remove a request to YouTube.
 
 Other:
 
@@ -94,22 +74,23 @@ Other:
 * New [dcrtime_checker](https://github.com/decred/dcrtime/tree/master/cmd/dcrtime_checker) tool was created to verify anchors against the blockchain directly (without interacting with dcrtimed).
 * About half VSPs upgraded to [self-host captcha](https://github.com/decred/dcrstakepool/issues/279) to protect privacy of their users. Status can be tracked [here](https://github.com/decred/dcrstakepool/issues/326).
 
-Dev activity stats for March: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for March: 360 active PRs, 497 master commits, 46K added and 34K deleted lines spread across 8 most active repositories. Contributions came from 2-9 developers per repository.
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @devwarrior ([atomicswap](https://github.com/decred/atomicswap/commits?author=devwarrior-cool)) and DominicTing ([dcrweb](https://github.com/decred/dcrweb/pull/588)).
+Welcome to new first time contributors with code merged to master branches: @devwarrior ([atomicswap](https://github.com/decred/atomicswap/commits?author=devwarrior-cool)) and DominicTing ([dcrweb](https://github.com/decred/dcrweb/pull/588)).
 
 ## Governance
 
-The ongoing [consensus vote](https://voting.decred.org/) is nearing completion with almost 100% support and 54.4% participation, projected to end on Apr 11.
+The ongoing [consensus vote](https://voting.decred.org/), commenced on Mar 14 (block 326,656), is nearing completion with almost 100% support and 54.4% participation, projected to end on Apr 11.
 
 In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 16,288 DCR and spent 13,595 DCR. Using March's daily average DCR/USD rate of $18.14, this is $296K received and $247K spent. As these payments were for work completed in Feb, it is also informative to consider them in the context of the Feb average daily rate of $16.51 - in which case the USD received/spent figures are $269K/$224K. As of Apr 9, Treasury balance is 608,560 DCR (15.3 million USD at $25.26).
 
-Proposal status as of Apr 9:
+Proposal status as of Apr 10:
 
 * [Trust Wallet integration](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) approved with 67% Yes votes of the 9.3K tickets that voted. Ahead of the vote, Trust Wallet developers [moved forward](https://github.com/TrustWallet/wallet-core/issues/43) to integrate Decred on their end.
-* [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) rejected - 52.5% Yes among 12.7K voting tickets didn't reach the quorum of 60%. Possibility of a second attempt was discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15542882616188dHEHP:decred.org).
+* [ATM Integration - Planning Phase](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) rejected - 52.5% Yes among 12.7K voting tickets didn't reach the threshold of 60%. Possibility of a second attempt was discussed [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15542882616188dHEHP:decred.org).
+* [Bring decred to Africa(Ghana) Adoption program for merchants and businesses](https://proposals.decred.org/proposals/dac06f18bfeb5f7667e56554774de3bb99151018ce16a64f5353bab45819763b) by @georgepro seeks $41,054 to fund 3 months of outreach for a merchant adoption program in Ghana. Vote started, reached the quorum and has 95% No votes as of Apr 10.
 * Re-submission of the Coffee Wallet [proposal](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731) after it was abandoned was [blocked](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$155144086813111EMAcC:decred.org) by admins as an attempt to use Politeia to market the product.
 * [Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337 outlines a 2-step process where a draft spending transaction is published on Politeia for review, and then voted for on-chain by the stakeholders. The development, testing and a required consensus vote are projected to take on the order of 9-12 months, with the budget of $200,000-250,000.
 * [Fiat pairs integration on EXMO Exchange](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) by vadymprykhodko was published following a [pre-proposal](https://www.reddit.com/r/decred/comments/b0y9le/integration_on_exmo_exchange_new_fiat_pairs/) on r/decred. The proposal seeks $23,800 to add DCR fiat pairs on EXMO, an exchange popular in Eastern Europe.
@@ -172,6 +153,8 @@ Ditto's March achievements:
 
 For more detail and smaller items see Ditto's biweekly updates from [Mar 1](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org), [Mar 15](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org) and [Mar 29](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1553889088955UNmaG:decred.org). Thanks to @liz\_bagot for consistently providing biweekly and monthly reports about Ditto's progress!
 
+April will showcase the first edition of the rebooted Decred Assembly, hosted by Dustin & Jake, and featuring various members of the community (internal and external). It will include a synopsis of news and timely topics, a deep dive into a specific subject matter, and a couple of other segments each week designed to share Decred's ethos and principles.
+
 Discussions:
 
 * [Revisited](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155298850932396heGyM:decred.org) an [old idea](https://github.com/decred/dcrweb/issues/66) to give "decentralized credits" more visibility.
@@ -208,7 +191,7 @@ Community efforts:
 * @anshawblack will head to New York in May to record several community members in person for his Decred in Depth podcast.
 * Decred Journal is now [mirrored](https://decredcommunity.org/filter?tag=Decred%20Journal&key=category) on decredcommunity.org. Notice the nice country flag buttons to quickly jump between translations.
 * @max\_bronstein compiled [Decred Canon](https://github.com/maxbron08/Decred-Canon) - a collection of readings and resources to help people familiarize themselves with the Decred Project.
-* New articles by @mm at stakey.club: [Sharing the dcrd](https://stakey.club/en/sharing-the-dcrd/) with multiple devices, [Decred Verifier](https://stakey.club/en/decred-verifier/) script to check hashes and signatures (you do verify signatures, right?).
+* New articles by @mm at stakey.club: [Sharing the dcrd](https://stakey.club/en/sharing-the-dcrd/) with multiple devices, [Decred Verifier](https://stakey.club/en/decred-verifier/) script to check hashes and signatures (you do [verify signatures](https://docs.decred.org/advanced/verifying-binaries/), right?).
 
 Selected articles:
 
@@ -235,7 +218,7 @@ Translations:
 
 * Decred: Where did it all begin? [in Dutch](https://github.com/Arriu/Decred/blob/master/translations/wherediditallbegin_dutch.md) by @jazzah
 * Detailed analysis of Decred fork resistance [in Dutch](https://decredcommunity.org/nl/blog/detailed-analysis-of-decred-fork-resistance) by @jazzah
-* Decred Journal January and February issues were [translated](https://xaur.github.io/decred-news/) to - hold your breath: Arabic by @arij (victorious after long fight with right-to-left issues), Chinese by @guang, Polish by @kozel, Russian by @DZ, Spanish by @elian and Vietnamese by Duyên Em. Thank you so much for spreading the word!
+* Decred Journal January and February issues were [translated](https://xaur.github.io/decred-news/) to - hold your breath: Arabic by @arij (victorious after long fight with right-to-left issues), Chinese by @guang, Polish by @kozel, Russian by @DZ, Spanish by @elian and Vietnamese by Duyên Em. Speaking of Vietnamese, [6 issues](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) are translated as of writing. Thank you all for spreading the word!
 * Translators, note that there is an index of translated articles [here](https://github.com/artikozel/decred-translations/blob/master/article_index.md). Reach out in [#writers_room](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org) or submit a pull request to add your translations.
 
 Audio:
@@ -284,15 +267,17 @@ GitHub is [updating](https://github.blog/2019-03-14-githubs-site-policy-updates-
 
 Stellar (XLM) [experienced](https://messari.io/article/messari-research-stellar-suffered-and-quietly-patched-a-2-2-billion-xlm-inflation-bug-in-2017) an inflation bug which was exploited to print 2.25 billion XLM (worth $10 million at the time, and nearly 25% of the circulating supply) in April 2017. This bug was lightly reported at the time, it was fixed by the Stellar Development Foundation (SDF) who burned an equal amount from its community reserve to offset the unintended inflation. That the SDF could identify, fix and mitigate such a major exploit so quietly says something about how decentralized Stellar is.
 
-PIVX experienced an inflation bug which was [exploited](https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701) in March. The bug concerned the network's zerocoin protocol (zPIV), and allowed an attacker to fake serial numbers and spend zerocoins that had never been minted. Over the course of five days, transactions creating and spending 568,897 PIV (~$438,000) were made before the exploit was identified and zPIV transactions were disabled (until it could be fixed). Besides regular takeaways like "consensus code is hard" and "cryptography is hard", this case has more food for thought. First, zerocoin functionality was disabled immediately after the exploit was discovered using one of the "sporks". Someone with the keys for these sporks can affect the whole network. Second, the bug was spotted because some nodes were [switching away](https://github.com/PIVX-Project/PIVX/pull/681) from OpenSSL that let the bug go unnoticed (OpenSSL is long [famous](https://www.peereboom.us/assl/assl/html/openssl.html) for its quality). While those nodes were not full alternative implementations, it still shows how a mismatch between diverse software helps to discover bugs. Third, it is possible to know exactly how many coins were minted because PIVX's zerocoin protocol allows supply to be [auditable](https://zcoin.io/zcoins-privacy-technology-compares-competition/), unlike some other protocols.
+PIVX experienced an inflation bug which was [exploited](https://medium.com/@dev.pivx/report-wrapped-serials-attack-5f4bf7b51701) in March. The bug concerned the network's zerocoin protocol (zPIV), and allowed an attacker to fake serial numbers and spend zerocoins that had never been minted. Over the course of five days, transactions creating and spending 568,897 PIV (~$438,000) were made before the exploit was identified and zPIV transactions were disabled (until it could be fixed). Besides regular takeaways like "consensus code is hard" and "cryptography is hard", this case has more food for thought. First, zerocoin functionality was disabled immediately after the exploit was discovered using one of the "sporks". Someone with the keys for these sporks can affect the whole network. Second, the bug was spotted because some nodes were [switching away](https://github.com/PIVX-Project/PIVX/pull/681) from OpenSSL that let the bug go unnoticed (OpenSSL is long [famous](https://www.peereboom.us/assl/assl/html/openssl.html) for its quality). While those nodes were not full alternative implementations, it still shows how a mismatch between diverse software helps to discover bugs. Third, it is possible to know exactly how many coins were minted because PIVX's zerocoin protocol allows supply to be [auditable](https://zcoin.io/zcoins-privacy-technology-compares-competition/), unlike some other privacy protocols.
+
+Ethereum is actively discussing a dev fund funded from block rewards. Kickstarted by Gitcoin co-founder, [ERC 1789](https://github.com/ethereum/EIPs/issues/1789) (continued as [EIP 1890](https://github.com/ethereum/EIPs/pull/1890)) provides an overview of funding models employed by open source and [makes a case](https://medium.com/gitcoin/funding-open-source-in-the-blockchain-era-8ded753bf05f) for inflation funding for protocol maintenance. A supplementary GitHub project was organized with a collection of [documents](https://github.com/ethereum-funding/docs) and more than 50 [issues](https://github.com/ethereum-funding/blockrewardsfunding/issues).
 
 Monero's new [Community Crowdfunding System](https://ccs.getmonero.org/) was [launched](https://www.reddit.com/r/Monero/comments/ay0j5n/the_new_ffs_is_complete_please_use_and_explore_it/), and a number of projects were funded.
 
-Dash held an [election](https://blog.dash.org/announcing-the-dash-dao-irrevocable-trust-election-results-bfe134c113b0) for Trust Protectors, people who will oversee the operation of a legal trust that has been [set up](https://blog.dash.org/dash-network-elected-trust-protectors-closing-the-governance-loop-4f07b46da03e) to own and control Dash Core Group. 
+Dash held an [election](https://blog.dash.org/announcing-the-dash-dao-irrevocable-trust-election-results-bfe134c113b0) for Trust Protectors, people who will oversee the operation of a legal trust that has been [set up](https://blog.dash.org/dash-network-elected-trust-protectors-closing-the-governance-loop-4f07b46da03e) to own and control Dash Core Group.
 
 Dash also [finished](https://blog.dash.org/deterministic-masternode-list-and-automatic-instantsend-now-live-f2028d833388) the deployment of the Deterministic Masternode List, enabling automatic instant payments for transactions with fewer than 4 inputs.
 
-Dash Core Group further [tightened](https://www.theblockcrypto.com/2019/03/04/corporation-behind-dash-lays-off-senior-staff-as-bear-market-grip-tightens/) its budget with layoffs and salary freezes. 
+Dash Core Group further [tightened](https://www.theblockcrypto.com/2019/03/04/corporation-behind-dash-lays-off-senior-staff-as-bear-market-grip-tightens/) its budget with layoffs and salary freezes.
 
 Tezos [concluded](https://www.coindesk.com/welcome-to-athens-tezos-completes-historic-first-blockchain-vote) the first round of voting for its Athens upgrade. In this round bakers were choosing from between two versions of the Athens upgrade which increases the gas limit, and they chose the Athens A version which also decreases the minimum roll size and lowers the barrier to entry for bakers. The process has now moved on to its next phase, where bakers must confirm that the selected proposal should proceed to a subsequent testing and confirmation phase.
 
@@ -308,15 +293,23 @@ New research from @BitwiseInvest [suggests](https://twitter.com/BitwiseInvest/st
 
 IMF found an [elegant solution](https://blogs.imf.org/2019/02/05/cashing-in-how-to-make-negative-interest-rates-work/) to make negative interest rates work as a counter-measure to a possible future crisis. A negative interest rate of -3% would mean you deposit $100 to a bank and withdraw $97 a year later. Such rates are currently hard to enforce because people would just withdraw to cash. The "straightforward" solution would be to move into a happy "cashless world" where the bank can set arbitrary negative rates and you simply can't withdraw to cash to save your value from melting. This is expected to "make consumption and investment more attractive, ... jolt lending, boost demand, and stimulate the economy". But getting rid of cash is not easy and is years away. So another solution to sustain a negative interest rate that is easier to roll today is to split a fiat currency into e-money and cash and introduce a floating conversion rate between them. This way, in a -3% interest rate scenario, you either deposit 100 cash dollars into e-dollars and get 97 e-dollars in a year, or hold cash and enjoy a 3% value loss against both goods and the e-dollar. In such a system there is no benefit to hold cash relative to bank deposits. Hasu and Su Zhu argue that crypto can [serve as a hedge](https://uncommoncore.co/bitcoin-is-a-hedge-against-the-cashless-society/) against the cashless society. Disclaimer: this paragraph is written by a layman. Economists are welcome to [comment](https://www.reddit.com/r/decred/) how this is healthy at all.
 
-[Coinbase Custody](https://custody.coinbase.com/) [enabled](https://twitter.com/CoinbaseCustody) deposits and withdrawals for ZIL, KNC, ZEC, XTZ and [claim](https://blog.coinbase.com/coinbase-custody-launches-staking-support-for-tezos-makerdao-governance-to-follow-68f7bc51bc53) to hold $600 million for 60 clients. The service offers regulated, insured and full offline, segregated custodial storage of crypto. The plan is to allow clients to fully participate in crypto networks besides just holding: Tezos baking (staking) is already implemented while voting in Tezos and MakerDAO is planned for Q2 2019.
+[Coinbase Custody](https://custody.coinbase.com/) [enabled](https://twitter.com/CoinbaseCustody) deposits and withdrawals for ZIL, KNC, ZEC, XTZ and [claim](https://blog.coinbase.com/coinbase-custody-launches-staking-support-for-tezos-makerdao-governance-to-follow-68f7bc51bc53) to hold $600 million for 60 clients. The service offers regulated, insured and full offline custodial storage of crypto. The plan is to allow clients to fully participate in crypto networks besides just holding: Tezos baking (staking) is already implemented while voting in Tezos and MakerDAO is planned for Q2 2019.
 
 Coinbase received a [backlash](https://www.coindesk.com/bitcoin-delete-coinbase-neutrino-crypto) from users who deleted their accounts to protest the acquisition of Neutrino, a blockchain analysis startup. The users were upset because Neutrino's executives previously worked for Hacking Team, which sold spyware to governments to aid surveillance and crackdown on journalists and critics. By coincidence, several user faced [difficulties](https://www.reddit.com/r/Bitcoin/comments/avw5uu/unable_to_close_coinbase_account/) closing their accounts. The Block [reported](https://www.theblockcrypto.com/2019/02/26/coinbase-responds-to-its-controversial-acquisition-of-blockchain-intelligence-platform-neutrino/) that Coinbase knew about Neutrino's background but still decided to proceed with the acquisition. A week later Coinbase CEO Brian Armstrong called it a "gap in our diligence process" and [announced](https://blog.coinbase.com/living-up-to-our-values-and-the-neutrino-acquisition-ba98174cdcf6) that people who worked at Hacking Team will transition out of Coinbase.
 
-The problem Coinbase tried to solve with that acquisition was their KYC contractors "selling client data", as [slipped](https://news.bitcoin.com/coinbase-severs-ties-with-hacking-team-members-while-data-sharing-backlash-intensifies/) in one interview. Many exchanges don't verify ID directly but instead hand it to 3rd parties, who may in turn hand it to more 3rd parties, and so on so it can quickly get [out of control](https://twitter.com/NickSzabo4/status/1102353760276275206). Per another [report](https://bitcoinmagazine.com/articles/coinbase-bought-neutrino-because-its-old-analysis-providers-sold-user-data/) there was not much choice for Coinbase due to another problem - many such firms moved to a 'give-get' data model, where Coinbase would only be permitted to use the service in return for providing its own data. Besides spreading to an unknown set of entities, another risk is that enormous amount of interlinked personal data may concentrate in a single place that will become an attractive target. For example, [Jumio](https://en.wikipedia.org/wiki/Jumio)'s Netverify is [used](https://cybersecurity-excellence-awards.com/candidates/netverify) by 5 of the top 10 exchanges including Coinbase, Bittrex and Bitstamp, and an increasing number of ICO issuers.
+The problem Coinbase tried to solve with that acquisition was their KYC contractors "selling client data", as [slipped](https://news.bitcoin.com/coinbase-severs-ties-with-hacking-team-members-while-data-sharing-backlash-intensifies/) in one interview. Many exchanges don't verify ID directly but instead hand it to 3rd parties, who may in turn hand it to more 3rd parties, and so on so it quickly gets [out of control](https://twitter.com/NickSzabo4/status/1102353760276275206). Per another [report](https://bitcoinmagazine.com/articles/coinbase-bought-neutrino-because-its-old-analysis-providers-sold-user-data/) there was not much choice for Coinbase due to another problem - many such firms moved to a 'give-get' data model, where Coinbase would only be permitted to use the service in return for providing its own data. Besides spreading to an unknown set of entities, another risk is that enormous amount of interlinked personal data may concentrate in a single place that will become an attractive target. For example, [Jumio](https://en.wikipedia.org/wiki/Jumio)'s Netverify is [used](https://cybersecurity-excellence-awards.com/candidates/netverify) by 5 of the top 10 exchanges including Coinbase, Bittrex and Bitstamp, and an increasing number of ICO issuers.
 
 New Android malware was [detected](https://www.group-ib.com/media/gustuff/) that targets more than 100 global banking apps including 32 cryptocurrency apps such as Bitcoin Wallet, BitPay, Cryptopay, Coinbase and others. Another [report](https://securelist.com/cryptocurrency-businesses-still-being-targeted-by-lazarus/90019/) about an old crypto hacking group recommends Windows and macOS users to be more cautious when dealing with new 3rd parties, installing software, and to never 'Enable Content' (macro scripting) in Microsoft Office documents received from new or untrusted sources.
 
-Beta of Neutrino wallet for Bitcoin Cash was [released](https://news.bitcoin.com/bitcoin-cash-developers-launch-privacy-preserving-light-client-neutrino/) for Android. It uses the same SPV tech as Decred to connect wallets directly to the nodes without intermediaries. See [December](201812.md) issue for the coverage of BCHD project and its relation to Decred.
+Beta of Neutrino wallet for Bitcoin Cash was [released](https://news.bitcoin.com/bitcoin-cash-developers-launch-privacy-preserving-light-client-neutrino/) for Android. It uses the same SPV tech as Decred to connect wallets directly to the nodes without intermediaries. Decred and [gcash](https://github.com/gcash) project have common code which makes an opportunity for code reuse and collaboration - see [December](201812.md) issue for more coverage.
+
+## PSA: Decred Journal Takes a Break
+
+Twelve issues mark a full year of Decred Journal exposing Decred's ethos, depth and community involvement.
+
+I (@bee) have accumulated a lot of things in life and in Decred that I would like to complete, and also I need a break. Therefore, the release of future issues is not guaranteed. I will, however, remain available in Matrix and do my best to assist anyone willing to produce Decred Journal. To get involved join [#writers_room](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
+
+Thank you to all readers and contributors!
 
 ## About This Issue
 
@@ -326,4 +319,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, davecgh, degeri, guang, jholdstock, liz\_bagot, raedah, richardred.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, guang, jholdstock, liz\_bagot, raedah, richardred, saender, sambiohazard.
