--- a/journal/201904.md
+++ b/journal/201904.md
@@ -157,7 +157,8 @@ Community stats:
 
 Comm systems news:
 
-* {}
+* Servers hosting matrix.org and riot.im compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537). Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
+* Matrix is moving to stop supporting self-signed certificates and rely on Certificate Authorities to behave.
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
