Add aragon stuff

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -203,6 +203,8 @@ voter participation research by @richardred https://twitter.com/RichardRed0x/sta
 
 EOS constitution being replaced by User Agreement by BPs https://medium.com/eos-new-york/the-eos-user-agreement-has-been-proposed-on-chain-61bf3760b604
 
+Aragon: keep focused on Ethereum, not Polkadot https://github.com/aragon/AGPs/pull/42 https://twitter.com/ameensol/status/1116361514531704832
+
 Ycash "friendly fork" of Zcash https://forum.zcashcommunity.com/t/announcing-ycash-the-first-friendly-fork-of-the-zcash-blockchain/33162
 
 Switzerland e-voting fail now all e-voting is bad https://www.schneier.com/blog/archives/2019/03/critical_flaw_i.html https://boingboing.net/2019/03/13/principal-agent-problems.html
