--- a/journal/201904.md
+++ b/journal/201904.md
@@ -218,6 +218,8 @@ ZRX Treasury stuff
 
 {related exchanges and websites}
 
+Couple of exchanges joined delisting war to delist bitcoinSV - https://www.coindesk.com/kraken-exchange-joins-binance-shapeshift-in-delisting-bitcoin-sv
+
 QuadrigaCX declared bankrupt after months of uncertainty https://cointelegraph.com/news/canadian-crypto-exchange-quadrigacx-officially-declared-bankrupt
 
 {other: regulations, security, fun}
