Add new merged PRs from dcrdocs, dcrd
Scanned through closed PRs so far this month for my assigned repos (all but Politeia and dcrdata). Added a few merged PRs on dcrdocs and dcrd that seemed relevant. Not seeing any major new changes in other repos, though could totally be missing things.

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -20,6 +20,10 @@ Old nodes will be forked off the network when {simple explanation}.
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+Merged:
+
+Refactoring continues, with cleanup of unused funcitons and conditions (less code equals less bugs!).
+
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
 [Decrediton](https://github.com/decred/decrediton): {}
@@ -43,6 +47,10 @@ Merged:
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
 [docs](https://github.com/decred/dcrdocs): {}
+
+Changes released:
+* New page on premine https://github.com/decred/dcrdocs/pull/913
+* New page on how to verify ticket votes via the Decred Block Explorer and CLI https://github.com/decred/dcrdocs/pull/907
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
