Adds new merged PRs from dcrdocs, dcrd
Scanned through closed PRs so far this month for my assigned repos (all but Politeia and dcrdata). Added a few merged PRs on dcrdocs and dcrd that seemed relevant. Not seeing any major new changes in other repos, though could totally be missing things.

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -20,6 +20,15 @@ Old nodes will be forked off the network when {simple explanation}.
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+Merged:
+
+"Cleanup done removing unused functions and logic (less code equals less bugs!)"
+
+* indexers: Remove unused func	https://github.com/decred/dcrd/pull/1714		
+* removes checks for impossible conditions	https://github.com/decred/dcrd/pull/1713		
+* server: Remove unused scheduling funcs	https://github.com/decred/dcrd/pull/1711		
+* mining: Remove unnecessary notify goroutine	https://github.com/decred/dcrd/pull/1708		
+
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
 [Decrediton](https://github.com/decred/decrediton): {}
@@ -43,6 +52,10 @@ Merged:
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
 
 [docs](https://github.com/decred/dcrdocs): {}
+
+Changes released:
+* New page on premine https://github.com/decred/dcrdocs/pull/913
+* New page on how to verify ticket votes via the Decred Block Explorer and CLI https://github.com/decred/dcrdocs/pull/907
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
