Add Dev activity
Add dev activity for: dcrd, dcrwallet, decrediton, dcrandroid and dcrios

--- a/journal/201904.md
+++ b/journal/201904.md
@@ -24,19 +24,51 @@ Old nodes will be forked off the network when {simple explanation}.
 
 Merged:
 
-Refactoring continues, with cleanup of unused funcitons and conditions (less code equals less bugs!).
+Refactoring continues, with cleanup of unused funcitons and conditions.
 
-[dcrwallet](https://github.com/decred/dcrwallet): {}
+Large refactoring of `chaincfg` module continues, which will address multiple issues in chaincfg. This work made possible due to previous work on versioned module support, which is now available and in full use. 
 
-[Decrediton](https://github.com/decred/decrediton): {}
+Started work:
+
+* Version 2 of the chaincfg package released. This made possible due to previous work on versioned module support, which is now available and in full use. https://github.com/decred/dcrd/pull/1698
+
+[dcrwallet](https://github.com/decred/dcrwallet): 
+
+Started work:
+
+* Allow wallet unlocks via a passphrase token https://github.com/decred/dcrwallet/pull/1437
+{}
+
+[Decrediton](https://github.com/decred/decrediton): 
+
+Work continues on design initiative to make Decredition [more responsive](https://github.com/decred/decrediton/issues/1820) on smaller screens. New responsive screen for creating wallets has been [merged](https://github.com/decred/decrediton/pull/2094), with more responsivene screens in the works. 
+
+Merged:
+* Make create new wallet screen responsive https://github.com/decred/decrediton/pull/2094
+
+Starged work:
+* Change dark mode automatically based on OS preferences https://github.com/decred/decrediton/pull/1993
+
+{}
 
 [Politeia](https://github.com/decred/politeia):
 
+
 * Performance boost merged, long in the works, lots of testing https://twitter.com/marco_peereboom/status/1120398754216062978
 
-[dcrandroid](https://github.com/decred/dcrandroid): {}
+[dcrandroid](https://github.com/decred/dcrandroid): 
+
+Minor bug fixes and language optimizations..
+
+Started work:
+* Biometric implementation: adds an extra layer of security by requesting the user users biometric authentication before entering wallet passphrase https://github.com/decred/dcrandroid/pull/343
+
+{}
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
+
+Have put the following copy out for review on the ios mobile testing telegram channel:
+Dcrios beta saw continued testing by community members and refinements. Only a few outstanding bugs remain, and team members continue working through the formal process of getting the app approved by the Apple Store. 
 
 Trezor: {}
 
@@ -57,6 +89,9 @@ Merged:
 Changes released:
 * New page on premine https://github.com/decred/dcrdocs/pull/913
 * New page on how to verify ticket votes via the Decred Block Explorer and CLI https://github.com/decred/dcrdocs/pull/907
+* New page on hardware wallets https://github.com/decred/dcrdocs/pull/927
+* Overhaul of Introduction to Decred Governance page in attempt to introduce complex concepts in a more accessible way https://github.com/decred/dcrdocs/pull/925
+* 
 
 [decred.org](https://github.com/decred/dcrweb): {}
 
